[RLS] Always update compositing layer offset and related dirty bits when scroll offset changes.

Previously, it did not update update them during layout, which could result in failure to update
composited scroll offset after situations like scroll clamping during synchronous
forced layouts.

Bug: 820839
Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel;master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: I129e7db4c5f4bc7b862b38de84ff174e7950fd5c
Reviewed-on: https://chromium-review.googlesource.com/963517
Commit-Queue: Chris Harrelson <chrishtr@chromium.org>
Reviewed-by: Steve Kobes <skobes@chromium.org>
Cr-Commit-Position: refs/heads/master@{#543287}
Former-commit-id: bc3e6fa5756624cf270d4c7667d6b58a10d3fc3d